Removed useless code Diorite is Java 8+ only